Remove --add-exports workaround for lphy.core.vectorization.array